--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_games_list">GamesList</string>
     <string name="title_activity_game">Game</string>
+    <string name="title_item_list">Items</string>
+    <string name="title_item_detail">Item Detail</string>
+    <string name="title_activity_main">Main</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 
 </resources>
