--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="app_id">174273356064735</string>
 
 </resources>
